MonetDB/src/modules/plain/Tests/mmath_nan.stable.out.AIX
stdout of test 'mmath_nan` in directory 'src/modules/plain` itself:


# 05:18:26 >  
# 05:18:26 >  Mtimeout -timeout 60 Mserver "--config=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/plain/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/contrib/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/calibrator/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/mapi/.libs" --set "gdk_dbfarm=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/dbfarm" --set "sql_logdir=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/log" --set mapi_port=49416 --set sql_port=57449 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath_nan.milM
# 05:18:26 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for powerpc-ibm-aix5.1.0.0/64bit; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");
log(-1.0LL).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
(log(-1.0LL)=log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: =(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
isnan(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: isnan(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
quit();

# 05:18:27 >  
# 05:18:27 >  Done.
# 05:18:27 >  
